@@ -8,8 +8,8 @@ android {
 		applicationId "de.christinecoenen.code.zapp"
 		minSdkVersion 19
 		targetSdkVersion 26
-		versionCode 18
-		versionName "1.7.0"
+		versionCode 19
+		versionName "1.7.1"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 	buildTypes {
