@@ -1,1 +1,2 @@
-* Untertitel für Mediathek-Videos
+* Absturz für ältere Android-Versionen behoben.
+* Verhindert, dass Mediathek-Sendungen auf Android 7 nicht geladen werden können.
